tests/rosetta/out/Fortran/bitmap-histogram.f90
! Generated by Mochi compiler v0.10.28 on 2006-01-02T15:04:05Z
program bitmap_histogram
  implicit none
    integer, allocatable, dimension(:) :: h
    integer :: i
    integer :: y
      integer :: row
      integer :: x
        integer :: p
        integer :: idx
    integer :: lb
    integer :: ub
    integer :: lSum
    integer :: uSum
    integer, allocatable, dimension(:) :: out
      integer, allocatable, dimension(:) :: newRow
          integer, allocatable, dimension(:) :: app0
      integer, allocatable, dimension(:) :: app1
      character(len=100) :: line
    integer :: img
    integer :: bw
    character(len=100) :: s2
    character(len=100) :: s3
  call main()
  
  contains
  recursive integer function image() result(res)
    res = (/(/0,0,10000/),(/65535,65535,65535/),(/65535,65535,65535/)/)
    return
  end function image
  recursive integer function histogram(g,bins) result(res)
    integer, intent(in) :: g
    integer, intent(in) :: bins
    if ((bins <= 0)) then
      bins = size(g(((0)+1)))
    end if
    allocate(h(0))
    i = 0
    do while ((i < bins))
      h = (/0/)
      i = (i + 1)
    end do
    y = 0
    do while ((y < size(g)))
      row = g(((y)+1))
      x = 0
      do while ((x < size(row)))
        p = row(((x)+1))
        idx = int(((((p * ((bins - 1)))) / 65535)))
        h(((idx)+1)) = (h(((idx)+1)) + 1)
        x = (x + 1)
      end do
      y = (y + 1)
    end do
    res = h
    return
  end function histogram
  recursive integer function medianThreshold(h) result(res)
    integer, intent(in) :: h
    lb = 0
    ub = (size(h) - 1)
    lSum = 0
    uSum = 0
    do while ((lb <= ub))
      if ((((lSum + h(((lb)+1))) < uSum) + h(((ub)+1)))) then
        lSum = (lSum + h(((lb)+1)))
        lb = (lb + 1)
      else
        uSum = (uSum + h(((ub)+1)))
        ub = (ub - 1)
      end if
    end do
    res = int(((((ub * 65535)) / size(h))))
    return
  end function medianThreshold
  recursive integer function threshold(g,t) result(res)
    integer, intent(in) :: g
    integer, intent(in) :: t
    allocate(out(0))
    y = 0
    do while ((y < size(g)))
      row = g(((y)+1))
      allocate(newRow(0))
      x = 0
      do while ((x < size(row)))
        if ((row(((x)+1)) < t)) then
          newRow = (/0/)
        else
          if (allocated(app0)) deallocate(app0)
          allocate(app0(size(newRow)+1))
          app0(1:size(newRow)) = newRow
          app0(size(newRow)+1) = 65535
          newRow = app0
        end if
        x = (x + 1)
      end do
      if (allocated(app1)) deallocate(app1)
      allocate(app1(size(out)+1))
      app1(1:size(out)) = out
      app1(size(out)+1) = newRow
      out = app1
      y = (y + 1)
    end do
    res = out
    return
  end function threshold
  recursive subroutine printImage(g)
    integer, intent(in) :: g
    y = 0
    do while ((y < size(g)))
      row = g(((y)+1))
      line = ''
      x = 0
      do while ((x < size(row)))
        if ((row(((x)+1)) == 0)) then
          line = line // '0'
        else
          line = line // '1'
        end if
        x = (x + 1)
      end do
      print *, line
      y = (y + 1)
    end do
  end subroutine printImage
  recursive subroutine main()
    img = image()
    h = histogram(img,0)
    write(s2,'(G0)') h
    print *, 'Histogram: ' // s2
    t = medianThreshold(h)
    write(s3,'(G0)') t
    print *, 'Threshold: ' // s3
    bw = threshold(img,t)
    call printImage(bw)
  end subroutine main
end program bitmap_histogram
